# pyneb

./: 240Pu_PES_SKMs-LN.out  252U_PES_SKMs-LN.out  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  python-app.yml
252U_Test_Case/Daniels_Code/: Eric_code.py  NEB_Class.py
Daniels_Code/: 252U_PES.h5  Eric_code.py  NEB_Class.py
Figures/: readme.md
Figures/232U_paths/: makepaths.py
Figures/Dijkstra_vs_dpm/: Dijkstra_vs_dpm.xcf
FlynnNEB/: FlynnNEB.ipynb
PES/: 232Th.csv  232Th.h5  232ThD1S_RES_PES_CHEM  232U-SkMs-NF25.h5  232U-SkMs-NF25.out  232U_original.h5  256FmD1S_RES_PES_CHEM
PES/Cleaning_Files/: 240Pu.py  Clean_232U.py
PES/chemistryPES/: ELEqsPathChemPES.txt
Paper_Figures/232U_paths/: makepaths.py
Paper_Figures/240Pu_paths/: 240Pu_2dplot.py  3d_plot.xcf  3dplot.pptx  Plotting3DPu240.nb  colors.txt  makepaths_240pu.py
Paper_Figures/Dijkstra_vs_dpm/: Dijkstra_vs_dpm.xcf
Paper_Figures/bimodal/: bimodal_plot.py
Paths/: Placeholder.txt  README.txt  Update_Path.py
Paths/232U/: 232U_Const_Mass.description  232U_Const_Mass.txt  232U_LAP_WMP_NEB.txt  232U_MAP_WMP.txt  232U_NDLinear_Mass_None.txt  232U_NDLinear_Mass_None_description.txt  232U_NDLinear_Mass_None_path.txt  232U_NDLinear_Mass_True.description  232U_NDLinear_Mass_True.txt  232U_NDLinear_Mass_True_path.txt  232U_PathPablo.txt  232U_PathPablo_MassParams.txt  232U_Var_Mass.description  232U_Var_Mass.txt  Eric_232U_LAP_Mass_False.description  Eric_232U_LAP_Mass_False_path.txt  Eric_232U_LAP_Mass_True.description  Eric_232U_LAP_Mass_True_path.txt  Eric_232U_MEP.description  Eric_232U_MEP_Mass_True.description  djk_mass.txt  djk_no-mass.txt  dpm_mass.txt  dpm_no-mass.txt  neb-lap_mass.txt  neb-lap_no-mass.txt  neb-mep_no-mass.txt  path_plot.py
Paths/240Pu/: 240Pu_3D_DPM_cont_mass_path.txt  240Pu_3d.ipynb  CMP_DPM.txt  (+23 more)
SylvestersPolynomial/: ELEqsPathSylvesterPES.txt
Sylvesters_Code/: dpm-2D.f90  dynamic.f90
docs/: conf.py  index.rst
examples/: README.md
flynn_code/: NEB_head.py  NEB_modules.py  flooding.py  flynn_NEB.ipynb  test_252U.py
movies/: asymm-movie.py  multi-modal.py
py_neb/: conf.py  index.rst  py_neb.py  py_neb_tests.py  requirements.txt
visualization/: neb_dashboard.py
(+207 files in other folders)
