[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "python-neb"
dynamic = ["version", "dependencies"]
authors = [
  {name="Kyle Godbey"},
  {name="Daniel Lay"},
  {name="Eric Flynn"},
]
description = "The Python Nudged Elastic Band Package"
readme = "README.md"
url = "https://github.com/pyneb/pyneb"
project_urls =
    Bug Tracker = "https://github.com/pyneb/pyneb"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "src/pyneb/__version__.py"
