[metadata]
name = py_neb
version = 0.1.0
author = Kyle Godbey
author_email = kyle@pyneb.dev
description = The Python Nudged Elastic Band Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pyneb/pyneb
project_urls =
    Bug Tracker = https://github.com/pyneb/pyneb
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
